// Package proof_test æä¾› MultiProofProvider çš„å•å…ƒæµ‹è¯•
//
// ğŸ§ª **æµ‹è¯•è¦†ç›–**ï¼š
// - MultiProofProvider è·¯ç”±åŠŸèƒ½æµ‹è¯•
// - å„ç§é”å®šæ¡ä»¶çš„è¯æ˜ç”Ÿæˆæµ‹è¯•
// - é”™è¯¯åœºæ™¯æµ‹è¯•
package proof

import (
	"context"
	"testing"

	"github.com/stretchr/testify/assert"

	"github.com/weisyn/v1/internal/core/tx/testutil"
	transaction "github.com/weisyn/v1/pb/blockchain/block/transaction"
)

// ==================== MultiProofProvider è·¯ç”±æµ‹è¯• ====================

// TestMultiProofProvider_GenerateProof_SingleKeyLock æµ‹è¯•å•å¯†é’¥é”å®š
func TestMultiProofProvider_GenerateProof_SingleKeyLock(t *testing.T) {
	signer := testutil.NewMockSigner(nil)
	provider := NewMultiProofProvider(signer)

	// åˆ›å»º SingleKeyLock
	lock := testutil.CreateSingleKeyLock(nil)

	// åˆ›å»ºäº¤æ˜“
	tx := testutil.CreateTransaction(
		[]*transaction.TxInput{
			{
				PreviousOutput:  testutil.CreateOutPoint(nil, 0),
				IsReferenceOnly: false,
			},
		},
		[]*transaction.TxOutput{
			testutil.CreateNativeCoinOutput(testutil.RandomAddress(), "1000", lock),
		},
	)

	// ç”Ÿæˆè¯æ˜åº”è¯¥å¤±è´¥ï¼ˆMultiProofProvider ä¸å¤„ç† SingleKeyLockï¼‰
	_, err := provider.GenerateProof(context.Background(), tx, lock)

	assert.Error(t, err)
	assert.Contains(t, err.Error(), "SimpleProofProvider")
}

// TestMultiProofProvider_GenerateProof_DelegationLock æµ‹è¯•å§”æ‰˜é”å®š
func TestMultiProofProvider_GenerateProof_DelegationLock(t *testing.T) {
	signer := testutil.NewMockSigner(nil)
	provider := NewMultiProofProvider(signer)

	// åˆ›å»º DelegationLock
	expiryDuration := uint64(0)
	delegationLock := &transaction.LockingCondition{
		Condition: &transaction.LockingCondition_DelegationLock{
			DelegationLock: &transaction.DelegationLock{
				OriginalOwner:        testutil.RandomAddress(),
				AllowedDelegates:     [][]byte{testutil.RandomAddress()},
				AuthorizedOperations: []string{"transfer"},
				ExpiryDurationBlocks: &expiryDuration,
				MaxValuePerOperation: 1000000,
			},
		},
	}

	// åˆ›å»ºäº¤æ˜“
	tx := testutil.CreateTransaction(
		[]*transaction.TxInput{
			{
				PreviousOutput:  testutil.CreateOutPoint(nil, 0),
				IsReferenceOnly: false,
			},
		},
		[]*transaction.TxOutput{
			testutil.CreateNativeCoinOutput(testutil.RandomAddress(), "1000", delegationLock),
		},
	)

	// ç”Ÿæˆè¯æ˜åº”è¯¥å¤±è´¥ï¼ˆéœ€è¦å¤–éƒ¨ä¸Šä¸‹æ–‡ï¼‰
	_, err := provider.GenerateProof(context.Background(), tx, delegationLock)

	assert.Error(t, err)
	assert.Equal(t, ErrDelegationRequiresExternalContext, err)
}

// TestMultiProofProvider_GenerateProof_MultiKeyLock æµ‹è¯•å¤šé‡ç­¾åé”å®š
func TestMultiProofProvider_GenerateProof_MultiKeyLock(t *testing.T) {
	signer := testutil.NewMockSigner(nil)
	provider := NewMultiProofProvider(signer)

	// åˆ›å»º MultiKeyLock
	multiKeyLock := &transaction.LockingCondition{
		Condition: &transaction.LockingCondition_MultiKeyLock{
			MultiKeyLock: &transaction.MultiKeyLock{
				RequiredSignatures: 2,
				AuthorizedKeys: []*transaction.PublicKey{
					{Value: testutil.RandomPublicKey()},
					{Value: testutil.RandomPublicKey()},
					{Value: testutil.RandomPublicKey()},
				},
			},
		},
	}

	// åˆ›å»ºäº¤æ˜“
	tx := testutil.CreateTransaction(
		[]*transaction.TxInput{
			{
				PreviousOutput:  testutil.CreateOutPoint(nil, 0),
				IsReferenceOnly: false,
			},
		},
		[]*transaction.TxOutput{
			testutil.CreateNativeCoinOutput(testutil.RandomAddress(), "1000", multiKeyLock),
		},
	)

	// ç”Ÿæˆè¯æ˜åº”è¯¥å¤±è´¥ï¼ˆéœ€è¦å¤–éƒ¨ MultiSigSessionï¼‰
	_, err := provider.GenerateProof(context.Background(), tx, multiKeyLock)

	assert.Error(t, err)
	assert.Equal(t, ErrMultiSigRequiresSession, err)
}

// TestMultiProofProvider_GenerateProof_ThresholdLock æµ‹è¯•é—¨é™ç­¾åé”å®š
func TestMultiProofProvider_GenerateProof_ThresholdLock(t *testing.T) {
	signer := testutil.NewMockSigner(nil)
	provider := NewMultiProofProvider(signer)

	// åˆ›å»º ThresholdLock
	thresholdLock := &transaction.LockingCondition{
		Condition: &transaction.LockingCondition_ThresholdLock{
			ThresholdLock: &transaction.ThresholdLock{
				Threshold:             2,
				TotalParties:          3,
				PartyVerificationKeys: [][]byte{testutil.RandomPublicKey(), testutil.RandomPublicKey(), testutil.RandomPublicKey()},
			},
		},
	}

	// åˆ›å»ºäº¤æ˜“
	tx := testutil.CreateTransaction(
		[]*transaction.TxInput{
			{
				PreviousOutput:  testutil.CreateOutPoint(nil, 0),
				IsReferenceOnly: false,
			},
		},
		[]*transaction.TxOutput{
			testutil.CreateNativeCoinOutput(testutil.RandomAddress(), "1000", thresholdLock),
		},
	)

	// ç”Ÿæˆè¯æ˜åº”è¯¥å¤±è´¥ï¼ˆéœ€è¦å¤–éƒ¨ ThresholdSignerï¼‰
	_, err := provider.GenerateProof(context.Background(), tx, thresholdLock)

	assert.Error(t, err)
	assert.Equal(t, ErrThresholdRequiresExternalSigner, err)
}

// TestMultiProofProvider_GenerateProof_ContractLock æµ‹è¯•åˆçº¦é”å®š
func TestMultiProofProvider_GenerateProof_ContractLock(t *testing.T) {
	signer := testutil.NewMockSigner(nil)
	provider := NewMultiProofProvider(signer)

	// åˆ›å»º ContractLock
	contractLock := &transaction.LockingCondition{
		Condition: &transaction.LockingCondition_ContractLock{
			ContractLock: &transaction.ContractLock{
				ContractAddress: testutil.RandomAddress(),
				RequiredMethod:  "transfer",
			},
		},
	}

	// åˆ›å»ºäº¤æ˜“
	tx := testutil.CreateTransaction(
		[]*transaction.TxInput{
			{
				PreviousOutput:  testutil.CreateOutPoint(nil, 0),
				IsReferenceOnly: false,
			},
		},
		[]*transaction.TxOutput{
			testutil.CreateNativeCoinOutput(testutil.RandomAddress(), "1000", contractLock),
		},
	)

	// ç”Ÿæˆè¯æ˜åº”è¯¥å¤±è´¥ï¼ˆéœ€è¦ ISPC å±‚ç”Ÿæˆï¼‰
	_, err := provider.GenerateProof(context.Background(), tx, contractLock)

	assert.Error(t, err)
	assert.Equal(t, ErrExecutionProofRequiresISPC, err)
}

// TestMultiProofProvider_GenerateProof_TimeLock æµ‹è¯•æ—¶é—´é”
func TestMultiProofProvider_GenerateProof_TimeLock(t *testing.T) {
	signer := testutil.NewMockSigner(nil)
	provider := NewMultiProofProvider(signer)

	// åˆ›å»º TimeLock
	timeLock := &transaction.LockingCondition{
		Condition: &transaction.LockingCondition_TimeLock{
			TimeLock: &transaction.TimeLock{
				UnlockTimestamp: uint64(0),
				BaseLock:        testutil.CreateSingleKeyLock(nil),
				TimeSource:      transaction.TimeLock_TIME_SOURCE_BLOCK_TIMESTAMP,
			},
		},
	}

	// åˆ›å»ºäº¤æ˜“
	tx := testutil.CreateTransaction(
		[]*transaction.TxInput{
			{
				PreviousOutput:  testutil.CreateOutPoint(nil, 0),
				IsReferenceOnly: false,
			},
		},
		[]*transaction.TxOutput{
			testutil.CreateNativeCoinOutput(testutil.RandomAddress(), "1000", timeLock),
		},
	)

	// ç”Ÿæˆè¯æ˜
	// æ³¨æ„ï¼šTimeProof å’Œ HeightProof åº”è¯¥åœ¨ TxInput å±‚é¢è®¾ç½®ï¼Œè€Œä¸æ˜¯ UnlockingProof
	// å½“å‰å®ç°ä¼šè¿”å›é”™è¯¯ï¼Œæµ‹è¯•åº”è¯¥åæ˜ å®é™…è¡Œä¸º
	_, err := provider.GenerateProof(context.Background(), tx, timeLock)

	// å½“å‰å®ç°ä¼šè¿”å›é”™è¯¯ï¼Œå› ä¸º TimeProof åº”è¯¥åœ¨ TxInput å±‚é¢å¤„ç†
	assert.Error(t, err)
}

// TestMultiProofProvider_GenerateProof_HeightLock æµ‹è¯•é«˜åº¦é”
func TestMultiProofProvider_GenerateProof_HeightLock(t *testing.T) {
	signer := testutil.NewMockSigner(nil)
	provider := NewMultiProofProvider(signer)

	// åˆ›å»º HeightLock
	heightLock := &transaction.LockingCondition{
		Condition: &transaction.LockingCondition_HeightLock{
			HeightLock: &transaction.HeightLock{
				UnlockHeight: 100,
				BaseLock:     testutil.CreateSingleKeyLock(nil),
			},
		},
	}

	// åˆ›å»ºäº¤æ˜“
	tx := testutil.CreateTransaction(
		[]*transaction.TxInput{
			{
				PreviousOutput:  testutil.CreateOutPoint(nil, 0),
				IsReferenceOnly: false,
			},
		},
		[]*transaction.TxOutput{
			testutil.CreateNativeCoinOutput(testutil.RandomAddress(), "1000", heightLock),
		},
	)

	// ç”Ÿæˆè¯æ˜
	// æ³¨æ„ï¼šTimeProof å’Œ HeightProof åº”è¯¥åœ¨ TxInput å±‚é¢è®¾ç½®ï¼Œè€Œä¸æ˜¯ UnlockingProof
	// å½“å‰å®ç°ä¼šè¿”å›é”™è¯¯ï¼Œæµ‹è¯•åº”è¯¥åæ˜ å®é™…è¡Œä¸º
	_, err := provider.GenerateProof(context.Background(), tx, heightLock)

	// å½“å‰å®ç°ä¼šè¿”å›é”™è¯¯ï¼Œå› ä¸º HeightProof åº”è¯¥åœ¨ TxInput å±‚é¢å¤„ç†
	assert.Error(t, err)
}

// TestMultiProofProvider_GenerateProof_UnsupportedLock æµ‹è¯•ä¸æ”¯æŒçš„é”å®šç±»å‹
func TestMultiProofProvider_GenerateProof_UnsupportedLock(t *testing.T) {
	signer := testutil.NewMockSigner(nil)
	provider := NewMultiProofProvider(signer)

	// åˆ›å»ºäº¤æ˜“
	tx := testutil.CreateTransaction(
		[]*transaction.TxInput{
			{
				PreviousOutput:  testutil.CreateOutPoint(nil, 0),
				IsReferenceOnly: false,
			},
		},
		[]*transaction.TxOutput{
			testutil.CreateNativeCoinOutput(testutil.RandomAddress(), "1000", nil),
		},
	)

	// åˆ›å»ºæ— æ•ˆçš„é”å®šæ¡ä»¶ï¼ˆnilï¼‰
	var lock *transaction.LockingCondition = nil

	// ç”Ÿæˆè¯æ˜åº”è¯¥å¤±è´¥
	_, err := provider.GenerateProof(context.Background(), tx, lock)

	assert.Error(t, err)
	assert.Contains(t, err.Error(), "unsupported lock type")
}

// ==================== MultiProofProvider è¾¹ç•Œæ¡ä»¶æµ‹è¯• ====================

// TestMultiProofProvider_GenerateProof_NilTransaction æµ‹è¯• nil transaction
func TestMultiProofProvider_GenerateProof_NilTransaction(t *testing.T) {
	signer := testutil.NewMockSigner(nil)
	provider := NewMultiProofProvider(signer)

	lock := testutil.CreateSingleKeyLock(nil)

	// ç”Ÿæˆè¯æ˜åº”è¯¥å¤±è´¥ï¼ˆè™½ç„¶ SingleKeyLock ä¼šè¿”å›é”™è¯¯ï¼Œä½† nil transaction åº”è¯¥å…ˆè¢«æ£€æŸ¥ï¼‰
	_, err := provider.GenerateProof(context.Background(), nil, lock)

	// å½“å‰å®ç°å¯èƒ½ä¸ä¼šæ£€æŸ¥ nil transactionï¼Œä½†åº”è¯¥è¿”å›é”™è¯¯
	assert.Error(t, err)
}

// TestMultiProofProvider_GenerateProof_NilLockingCondition æµ‹è¯• nil locking condition
func TestMultiProofProvider_GenerateProof_NilLockingCondition(t *testing.T) {
	signer := testutil.NewMockSigner(nil)
	provider := NewMultiProofProvider(signer)

	// åˆ›å»ºäº¤æ˜“
	tx := testutil.CreateTransaction(
		[]*transaction.TxInput{
			{
				PreviousOutput:  testutil.CreateOutPoint(nil, 0),
				IsReferenceOnly: false,
			},
		},
		[]*transaction.TxOutput{
			testutil.CreateNativeCoinOutput(testutil.RandomAddress(), "1000", nil),
		},
	)

	// ç”Ÿæˆè¯æ˜åº”è¯¥å¤±è´¥
	_, err := provider.GenerateProof(context.Background(), tx, nil)

	assert.Error(t, err)
	assert.Contains(t, err.Error(), "unsupported lock type")
}

// TestMultiProofProvider_GenerateProof_TimeLock_NilBaseLock æµ‹è¯• TimeLock çš„ BaseLock ä¸º nil
func TestMultiProofProvider_GenerateProof_TimeLock_NilBaseLock(t *testing.T) {
	signer := testutil.NewMockSigner(nil)
	provider := NewMultiProofProvider(signer)

	// åˆ›å»º TimeLockï¼ˆBaseLock ä¸º nilï¼‰
	timeLock := &transaction.LockingCondition{
		Condition: &transaction.LockingCondition_TimeLock{
			TimeLock: &transaction.TimeLock{
				UnlockTimestamp: uint64(0),
				BaseLock:        nil, // nil BaseLock
				TimeSource:      transaction.TimeLock_TIME_SOURCE_BLOCK_TIMESTAMP,
			},
		},
	}

	tx := testutil.CreateTransaction(
		[]*transaction.TxInput{
			{
				PreviousOutput:  testutil.CreateOutPoint(nil, 0),
				IsReferenceOnly: false,
			},
		},
		[]*transaction.TxOutput{
			testutil.CreateNativeCoinOutput(testutil.RandomAddress(), "1000", timeLock),
		},
	)

	// ç”Ÿæˆè¯æ˜åº”è¯¥å¤±è´¥ï¼ˆTimeProof åº”è¯¥åœ¨ TxInput å±‚é¢å¤„ç†ï¼‰
	_, err := provider.GenerateProof(context.Background(), tx, timeLock)

	assert.Error(t, err)
}

// TestMultiProofProvider_GenerateProof_HeightLock_NilBaseLock æµ‹è¯• HeightLock çš„ BaseLock ä¸º nil
func TestMultiProofProvider_GenerateProof_HeightLock_NilBaseLock(t *testing.T) {
	signer := testutil.NewMockSigner(nil)
	provider := NewMultiProofProvider(signer)

	// åˆ›å»º HeightLockï¼ˆBaseLock ä¸º nilï¼‰
	heightLock := &transaction.LockingCondition{
		Condition: &transaction.LockingCondition_HeightLock{
			HeightLock: &transaction.HeightLock{
				UnlockHeight: 100,
				BaseLock:     nil, // nil BaseLock
			},
		},
	}

	tx := testutil.CreateTransaction(
		[]*transaction.TxInput{
			{
				PreviousOutput:  testutil.CreateOutPoint(nil, 0),
				IsReferenceOnly: false,
			},
		},
		[]*transaction.TxOutput{
			testutil.CreateNativeCoinOutput(testutil.RandomAddress(), "1000", heightLock),
		},
	)

	// ç”Ÿæˆè¯æ˜åº”è¯¥å¤±è´¥ï¼ˆHeightProof åº”è¯¥åœ¨ TxInput å±‚é¢å¤„ç†ï¼‰
	_, err := provider.GenerateProof(context.Background(), tx, heightLock)

	assert.Error(t, err)
}

// TestMultiProofProvider_GenerateProof_DelegationLock_Error æµ‹è¯• DelegationLock è¿”å›é”™è¯¯
func TestMultiProofProvider_GenerateProof_DelegationLock_Error(t *testing.T) {
	signer := testutil.NewMockSigner(nil)
	provider := NewMultiProofProvider(signer)

	// åˆ›å»º DelegationLock
	expiryDuration := uint64(0)
	delegationLock := &transaction.LockingCondition{
		Condition: &transaction.LockingCondition_DelegationLock{
			DelegationLock: &transaction.DelegationLock{
				OriginalOwner:        testutil.RandomAddress(),
				AllowedDelegates:     [][]byte{testutil.RandomAddress()},
				AuthorizedOperations: []string{"transfer"},
				ExpiryDurationBlocks: &expiryDuration,
				MaxValuePerOperation: 1000000,
			},
		},
	}

	// åˆ›å»ºäº¤æ˜“
	tx := testutil.CreateTransaction(
		[]*transaction.TxInput{
			{
				PreviousOutput:  testutil.CreateOutPoint(nil, 0),
				IsReferenceOnly: false,
			},
		},
		[]*transaction.TxOutput{
			testutil.CreateNativeCoinOutput(testutil.RandomAddress(), "1000", delegationLock),
		},
	)

	// ç”Ÿæˆè¯æ˜åº”è¯¥å¤±è´¥ï¼ˆéœ€è¦å¤–éƒ¨ä¸Šä¸‹æ–‡ï¼‰
	_, err := provider.GenerateProof(context.Background(), tx, delegationLock)

	assert.Error(t, err)
	assert.Equal(t, ErrDelegationRequiresExternalContext, err)
}

// ==================== generateTimeProof é”™è¯¯è·¯å¾„æµ‹è¯• ====================

// TestMultiProofProvider_GenerateProof_TimeLock_NilTimeLock æµ‹è¯• TimeLock ä¸º nil
func TestMultiProofProvider_GenerateProof_TimeLock_NilTimeLock(t *testing.T) {
	signer := testutil.NewMockSigner(nil)
	provider := NewMultiProofProvider(signer)

	// åˆ›å»º TimeLockï¼ˆTimeLock æœ¬èº«ä¸º nilï¼‰
	timeLock := &transaction.LockingCondition{
		Condition: &transaction.LockingCondition_TimeLock{
			TimeLock: nil, // nil TimeLock
		},
	}

	tx := testutil.CreateTransaction(
		[]*transaction.TxInput{
			{
				PreviousOutput:  testutil.CreateOutPoint(nil, 0),
				IsReferenceOnly: false,
			},
		},
		[]*transaction.TxOutput{
			testutil.CreateNativeCoinOutput(testutil.RandomAddress(), "1000", timeLock),
		},
	)

	_, err := provider.GenerateProof(context.Background(), tx, timeLock)

	assert.Error(t, err)
	assert.Contains(t, err.Error(), "TimeLock is nil")
}

// TestMultiProofProvider_GenerateProof_TimeLock_BaseProofError æµ‹è¯• base proof ç”Ÿæˆå¤±è´¥
func TestMultiProofProvider_GenerateProof_TimeLock_BaseProofError(t *testing.T) {
	signer := testutil.NewMockSigner(nil)
	provider := NewMultiProofProvider(signer)

	// åˆ›å»º TimeLockï¼ˆBaseLock ä½¿ç”¨ MultiKeyLockï¼Œä¼šè¿”å›é”™è¯¯ï¼‰
	multiKeyLock := &transaction.LockingCondition{
		Condition: &transaction.LockingCondition_MultiKeyLock{
			MultiKeyLock: &transaction.MultiKeyLock{
				RequiredSignatures: 2,
				AuthorizedKeys: []*transaction.PublicKey{
					{Value: testutil.RandomPublicKey()},
					{Value: testutil.RandomPublicKey()},
				},
			},
		},
	}

	timeLock := &transaction.LockingCondition{
		Condition: &transaction.LockingCondition_TimeLock{
			TimeLock: &transaction.TimeLock{
				UnlockTimestamp: uint64(0),
				BaseLock:        multiKeyLock, // BaseLock ä¼šè¿”å›é”™è¯¯
				TimeSource:      transaction.TimeLock_TIME_SOURCE_BLOCK_TIMESTAMP,
			},
		},
	}

	tx := testutil.CreateTransaction(
		[]*transaction.TxInput{
			{
				PreviousOutput:  testutil.CreateOutPoint(nil, 0),
				IsReferenceOnly: false,
			},
		},
		[]*transaction.TxOutput{
			testutil.CreateNativeCoinOutput(testutil.RandomAddress(), "1000", timeLock),
		},
	)

	_, err := provider.GenerateProof(context.Background(), tx, timeLock)

	assert.Error(t, err)
	assert.Contains(t, err.Error(), "failed to generate base proof for TimeLock")
}

// ==================== generateHeightProof é”™è¯¯è·¯å¾„æµ‹è¯• ====================

// TestMultiProofProvider_GenerateProof_HeightLock_NilHeightLock æµ‹è¯• HeightLock ä¸º nil
func TestMultiProofProvider_GenerateProof_HeightLock_NilHeightLock(t *testing.T) {
	signer := testutil.NewMockSigner(nil)
	provider := NewMultiProofProvider(signer)

	// åˆ›å»º HeightLockï¼ˆHeightLock æœ¬èº«ä¸º nilï¼‰
	heightLock := &transaction.LockingCondition{
		Condition: &transaction.LockingCondition_HeightLock{
			HeightLock: nil, // nil HeightLock
		},
	}

	tx := testutil.CreateTransaction(
		[]*transaction.TxInput{
			{
				PreviousOutput:  testutil.CreateOutPoint(nil, 0),
				IsReferenceOnly: false,
			},
		},
		[]*transaction.TxOutput{
			testutil.CreateNativeCoinOutput(testutil.RandomAddress(), "1000", heightLock),
		},
	)

	_, err := provider.GenerateProof(context.Background(), tx, heightLock)

	assert.Error(t, err)
	assert.Contains(t, err.Error(), "HeightLock is nil")
}

// TestMultiProofProvider_GenerateProof_HeightLock_BaseProofError æµ‹è¯• base proof ç”Ÿæˆå¤±è´¥
func TestMultiProofProvider_GenerateProof_HeightLock_BaseProofError(t *testing.T) {
	signer := testutil.NewMockSigner(nil)
	provider := NewMultiProofProvider(signer)

	// åˆ›å»º HeightLockï¼ˆBaseLock ä½¿ç”¨ MultiKeyLockï¼Œä¼šè¿”å›é”™è¯¯ï¼‰
	multiKeyLock := &transaction.LockingCondition{
		Condition: &transaction.LockingCondition_MultiKeyLock{
			MultiKeyLock: &transaction.MultiKeyLock{
				RequiredSignatures: 2,
				AuthorizedKeys: []*transaction.PublicKey{
					{Value: testutil.RandomPublicKey()},
					{Value: testutil.RandomPublicKey()},
				},
			},
		},
	}

	heightLock := &transaction.LockingCondition{
		Condition: &transaction.LockingCondition_HeightLock{
			HeightLock: &transaction.HeightLock{
				UnlockHeight: 100,
				BaseLock:     multiKeyLock, // BaseLock ä¼šè¿”å›é”™è¯¯
			},
		},
	}

	tx := testutil.CreateTransaction(
		[]*transaction.TxInput{
			{
				PreviousOutput:  testutil.CreateOutPoint(nil, 0),
				IsReferenceOnly: false,
			},
		},
		[]*transaction.TxOutput{
			testutil.CreateNativeCoinOutput(testutil.RandomAddress(), "1000", heightLock),
		},
	)

	_, err := provider.GenerateProof(context.Background(), tx, heightLock)

	assert.Error(t, err)
	assert.Contains(t, err.Error(), "failed to generate base proof for HeightLock")
}
